# sanity-client

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs  sanity.rs  sanrs.rs
src/sanity/: client.rs  endpoints.rs  errs.rs
src/sanity/endpoints/: endpoint.rs  export.rs  mod.rs  mutate.rs  projects.rs  query.rs
src/sanity/endpoints/actions/: delete.rs  mod.rs  patch.rs
src/sanity/endpoints/core/: delete.rs  export.rs  mod.rs  patch.rs
src/sanrs/: cli.rs  config.rs  entry.rs  query_shell.rs  sanrs.rs
tests/: sanity_test.rs  test_create.rs  test_export.rs  test_integration.rs  test_mutate.rs  test_query.rs
