[package]
name = "sanity-client"
version = "0.1.0"
edition = "2021"

[features]
sanrs = ["clap", "colored"]
colored = ["dep:colored"]

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive"], optional = true }
colored = { version = "2.1", optional = true }
dotenv = "0.15.0"
env_logger = "0.11.3"
log = "0.4.22"
reqwest = { version = "0.12.5", features = ["json", "multipart"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }

[dev-dependencies]
dotenv = "0.15.0"
